k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-calculator
  labels:
    app: devops-calculator
spec:
  type: ClusterIP
  selector:
    app: devops-calculator
  ports:
    - name: http
      port: 80
      targetPort: http
